crates/stc_ts_file_analyzer/tests/errors/conformance/types/intersection/typeReadOnly/4.ts
interface Base {
    readonly value: number;
}
interface DifferentName {
    readonly other: number;
}

let differentName: Base & DifferentName;
differentName.value = 12; // error, property 'value' doesn't exist
